[gd_scene load_steps=5 format=2]

[ext_resource path="res://Game/MainScreens/OptionsBubbleBool.gd" type="Script" id=1]
[ext_resource path="res://Game/Backgrounds/RandomBackground.tscn" type="PackedScene" id=2]
[ext_resource path="res://Game/Buttons/Commons/Back.tscn" type="PackedScene" id=3]
[ext_resource path="res://Game/Buttons/MenuButton.tscn" type="PackedScene" id=4]

[node name="OptionsBubbleBool" type="Node" index="0"]
script = ExtResource( 1 )

[node name="RandomBackground" parent="." index="0" instance=ExtResource( 2 )]

[node name="Back" parent="." index="1" instance=ExtResource( 3 )]

[node name="VBox" type="VBoxContainer" parent="." index="2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -256.0
margin_right = 150.0
margin_bottom = 256.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="Fast" parent="VBox" index="0" instance=ExtResource( 4 )]
editor/display_folded = false

[node name="Label" parent="VBox/Fast" index="0"]
text = "Fast"

[node name="Normal" parent="VBox" index="1" instance=ExtResource( 4 )]
editor/display_folded = false
margin_top = 172.0
margin_bottom = 340.0

[node name="Label" parent="VBox/Normal" index="0"]
text = "Normal"

[node name="Slow" parent="VBox" index="2" instance=ExtResource( 4 )]
editor/display_folded = false
margin_top = 344.0
margin_bottom = 512.0

[node name="Label" parent="VBox/Slow" index="0"]
text = "Slow"

[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="VBox/Fast" to="." method="_on_Fast_pressed"]
[connection signal="pressed" from="VBox/Normal" to="." method="_on_Normal_pressed"]
[connection signal="pressed" from="VBox/Slow" to="." method="_on_Slow_pressed"]

[editable path="VBox/Fast"]

[editable path="VBox/Normal"]

[editable path="VBox/Slow"]
